fix: add z-index to tooltip and product variants preview for proper stacking context (#4)

--- a/wordpress/wp-content/plugins/multistore/src/_app/tooltip.scss
+++ b/wordpress/wp-content/plugins/multistore/src/_app/tooltip.scss
@@ -10,6 +10,7 @@
 	--tooltip-background: #1e1e1e;
 
 	position: relative;
+	z-index: 2;
 	display: inline-flex;
 	align-items: center;
 
