--- a/wordpress/wp-content/plugins/multistore/src/product-variants-preview/style.scss
+++ b/wordpress/wp-content/plugins/multistore/src/product-variants-preview/style.scss
@@ -1,6 +1,7 @@
 .multistore-block-product-variants-preview {
 	position: relative;
 	width: 100%;
+	z-index: 2;
 
 	.is-hidden {
 		display: none;
